Removes absolute value and adds neg sign to level inelastic Q

--- a/src/ContinuousEnergyNeutron.tex
+++ b/src/ContinuousEnergyNeutron.tex
@@ -484,7 +484,7 @@ In the following tables, we provide relative locations of data in the \var{LDAT}
 
 \subsubsubsection{\var{LAW}=3---Level Scattering}\label{sec:LAW3}
 \begin{LAWTable}{\var{LAW}=3---Level Scattering}
-  \var{LDAT}(1) & & $ (A+1)/A|Q|$ \\
+  \var{LDAT}(1) & & $ -(A+1)Q/A$ \\
   \var{LDAT}(2) & & $ (A/(A+1))^{2}$
   \label{tab:LAW3}
 \end{LAWTable}
